Fixed footer alignment and added genuine content for diff container

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,8 +178,8 @@ body{
 }
 
 .professor-img{
-    width: 80%;
-    height: 500px;
+    width: 100%;
+    height: 600px;
 
 
     -webkit-background-size: cover;
@@ -378,7 +378,7 @@ section#about-us{
 }
 .place{
     position: relative;
-    width: 30% !important;
+    width: 40% !important;
     height: 100% !important;
 
     /* background-color: pink; */
@@ -653,8 +653,9 @@ section#footer{
 
 #footer p, #footer nav ul li{
     color: #fff;
-font-size: 1.1rem;
-
+font-size: 1.2rem;
+padding-bottom: 15px;
+cursor: pointer;
 }
 #footer nav ul{
     list-style-type: none;
@@ -664,18 +665,20 @@ font-size: 1.1rem;
     /* background: red; */
     display: flex;
     flex-direction: column;
-font-size: 1.1rem;
+
     color: #fff;
 }
-/* .contact-link .c-link{
+
+.cl{
     display: flex;
-    justify-content: space-between;
-    text-align: left;
+    flex-direction: row;
+    margin-bottom: 1rem;
 }
-*/
-.contact-link .c-link i{
-    font-size: 22px;
+.cl i{
+    /* padding: 2px; */
+    font-size: 1.7rem;
     
-} 
+    margin-right: 1.1rem;
+}
 
 /*refractor ends*/
